--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   </div>
   <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi vel saepe ad est repudiandae corporis quos perspiciatis repellat aliquid possimus temporibus, laboriosam quod beatae eligendi sunt eos neque architecto eaque.</p>
   <div><img src="./images/Abstract-blue-wave-on-transparent-background-PNG.png" class="img-responsive" alt="" width="500" height="333"></div>
-  <P>mahabub thumi koi? here is mahabub</P>
+  <P>mahabub thumi koi? here a is mahabub</P>
   
 </body>
 </html>
